fix: content padding on mobile

--- a/main.css
+++ b/main.css
@@ -281,13 +281,6 @@ a.nav-link {
     box-shadow: 0px 8px 18px rgba(0, 0, 0, .2);
 }
 
-@media(max-width:425px) {
-    .mobile-fullwidth {
-        padding-left: 0!important;
-        padding-right: 0!important;
-    }
-}
-
 @media(min-width:768px){
     .container.body {
         margin-bottom: 76px;
@@ -326,6 +319,13 @@ a.nav-link {
 .content>div{
     width: 100%;
     margin-bottom: 32px;
+}
+
+@media(max-width:425px) {
+    .main-content>.content {
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
 }
 
 .content-accordion a {
